// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.rpc;

option go_package = "infra/appengine/unified-fleet/api/v1/rpc;ufspb";

import "infra/appengine/unified-fleet/api/v1/proto/chrome_platform.proto";

service Fleet {
  // ImportChromePlatforms imports chrome platforms.
  rpc ImportChromePlatforms(ImportChromePlatformsRequest) returns (ImportChromePlatformsResponse);
}

message ImportChromePlatformsRequest {
  // Support importing from local file.
  string local_filepath = 1;
}

message ImportChromePlatformsResponse {
  repeated ChromePlatformResult passed = 1;
  repeated ChromePlatformResult failed = 2;
}

message ChromePlatformResult {
  proto.ChromePlatform platform = 1;
  string error_msg = 2;
}